ReadME file with descriptions and requirements and changes to helper file

--- a/2_Exploratory Data Analysis & Feature Selection.ipynb
+++ b/2_Exploratory Data Analysis & Feature Selection.ipynb
@@ -4200,31 +4200,25 @@
     "    - log-transform then scale\n",
     "- 'units', 'ln_itm_qty', 'ln_itm_val', 'pk_price', 'ln_itm_weight', 'ln_itm_freight_cost'\n",
     "    - all have wide ranges, log transforms\n",
-    "- Check to se if missing value imputation caused any big changes\n",
+    "- Check to see if missing value imputation caused any big changes\n",
     "\n",
     "#### dnum_country\n",
-    "- **country_costcount** is highly correlated with **country_weightcount** (ρ = 1) Rejected\n",
-    "- **country_inscount** is highly correlated with country_valcount (ρ = 1) Rejected\n",
-    "- **country_insmean** is highly correlated with country_valmean (ρ = 0.93359) Rejected\n",
-    "- **country_inssum** is highly correlated with country_valsum (ρ = 0.94796) Rejected\n",
-    "- **country_valcount** is highly correlated with country_qtycount (ρ = 1) Rejected\n",
-    "- country_weightcount is highly correlated with **country_inscount** (ρ = 1) Rejected\n",
+    "- country_weightcount is highly correlated with **country_inscount**\n",
     "- factory has a high cardinality: 88 distinct values Warning\n",
     "- molecule_test has a high cardinality: 86 distinct values Warning\n",
     "- vendor has a high cardinality: 73 distinct values Warning\n",
-    "- ** Drop all the highly correlated columns, keep the high cardinality ones for now\n",
     "\n",
     "#### dnum_vendor\n",
-    "- Xxx\n",
+    "- Similar findings to the other entity data - high correlations between price, weight and quantity variables\n",
     "\n",
     "#### dnum_molecule_test\n",
-    "- Xxx\n",
+    "- Similar findings to the other entity data - high correlations between price, weight and quantity variables\n",
     "\n",
     "#### dnum_factory\n",
-    "- Xxx\n",
+    "- Similar findings to the other entity data - high correlations between price, weight and quantity variables\n",
     "\n",
     "#### dnum_brand\n",
-    "- Xxx"
+    "- Similar findings to the other entity data - high correlations between price, weight and quantity variables"
    ]
   },
   {
