--- a/3_Model Pipeline, Benchmark, Selection & Refinement.ipynb
+++ b/3_Model Pipeline, Benchmark, Selection & Refinement.ipynb
@@ -107,17 +107,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# # Convert the time-delta objects to numeric and\n",
-    "# # apply conversion from nanoseconds to days F= 1/(1e9*3600*24)\n",
-    "# df = df.apply(lambda col: pd.to_numeric(col, errors = 'ignore')/(1e9*3600*24) \n",
-    "#                   if col.dtypes== 'timedelta64[ns]' else col, axis =0)"
+    "### Use Feature Selection Results \n",
+    "#### Supported by Dimensionality Reduction, Feature Importance analysis from previous notebook"
    ]
   },
   {
@@ -199,90 +195,6 @@
     "snm=[#'molecule_test', \n",
     "     'molecule_test_qtycount'\n",
     "     #,'molecule_test_qtymean', 'molecule_test_valmean'\n",
-    "     ,'molecule_test_insmean']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "so_alt =[ #'pq_date_new_yr', 'pq_date_new_mn', 'pq_date_new_dy',\n",
-    " 'po_date_new_yr', 'po_date_new_mn', 'po_date_new_dy',\n",
-    "  'del_date_scheduled_mn', 'del_date_scheduled_dy'\n",
-    " #, 'del_date_client_yr', 'del_date_client_mn','del_date_client_dy'\n",
-    " #, 'del_date_recorded_yr', 'del_date_recorded_mn','del_date_recorded_dy'\n",
-    " #, 'pq_date_new_wd', 'pq_date_new_wk','pq_date_new_qt'\n",
-    " , 'po_date_new_wd', 'po_date_new_wk', 'po_date_new_qt'\n",
-    " ,'del_date_scheduled_wd', 'del_date_scheduled_wk','del_date_scheduled_qt'\n",
-    " #, 'del_date_client_wd', 'del_date_client_wk','del_date_client_qt'\n",
-    " #, 'del_date_recorded_wd', 'del_date_recorded_wk','del_date_recorded_qt'\n",
-    " #, 'delayed'\n",
-    " #, 'proj_code', 'pq_no', 'po_no','ship_no'\n",
-    " #, 'country'\n",
-    "    , 'mngr', 'fulfill_via', 'vendor_terms'\n",
-    " ,'ship_mode'\n",
-    " #, 'pq_date'\n",
-    " #, 'po_date'\n",
-    "    , 'prod_grp', 'sub_class'\n",
-    "    , 'vendor'\n",
-    " ,'itm_desc'\n",
-    " , 'molecule_test', 'brand', 'dosage'\n",
-    " , 'dosage_form','factory'\n",
-    "    , 'first_line'\n",
-    " #, 'weight', 'freight_cost'\n",
-    " ,'del_date_scheduled_yr', 'ship_config', 'weight_captured_seperately'\n",
-    " ,'freight_invoiced_seperately', 'freight_in_cmdty_cost'\n",
-    " #,'factory_address'\n",
-    " , 'origin_country'\n",
-    "    , 'origin_continent'\n",
-    " #, 'name'\n",
-    " , 'dest_country'\n",
-    "# , 'orig_origin_country'\n",
-    "]\n",
-    "\n",
-    "snlf_alt = [#'dest_mean', 'dest_sum', 'dest_count'\n",
-    "        #, 'orig_mean', 'orig_sum','orig_count',\n",
-    "    'dest_fsi','dest_intl_ship', 'dest_timeliness'\n",
-    ", 'dest_track_trace', 'dest_customs', 'dest_lpi', 'dest_infra',\n",
-    "        'dest_logistic_qlty',\n",
-    "    'orig_fsi','dest_count','orig_intl_ship', 'orig_timeliness'\n",
-    ", 'orig_track_trace', 'orig_customs', 'orig_lpi', 'orig_infra',\n",
-    "        'orig_logistic_qlty']\n",
-    "\n",
-    "#dnum\n",
-    "sn_alt =['ln_itm_qty', 'ln_itm_val', 'pk_price','line_itm_ins', 'ln_itm_weight']\n",
-    "# dnum_country\n",
-    "snc_alt =  ['country_qtycount', 'country_qtymean',\n",
-    "        'country_valmean', 'country_insmean',\n",
-    "       'country_weightmean',  'country_costmean'\n",
-    "       ]\n",
-    "# dnum_vendor\n",
-    "snv_alt =[#'vendor',\n",
-    "    'vendor_qtycount',\n",
-    "     'vendor_qtysum',\n",
-    "       'vendor_qtymean'\n",
-    "    , 'vendor_valsum', 'vendor_valmean', 'vendor_inssum',\n",
-    "       'vendor_insmean', 'vendor_weightsum',  'vendor_costsum'\n",
-    "]\n",
-    "# dnum_factory\n",
-    "snf_alt =[#'factory',\n",
-    "     'factory_qtycount', \n",
-    "     'factory_qtymean', 'factory_valmean','factory_costmean'\n",
-    "    ]\n",
-    "#dnum_brand\n",
-    "snb_alt = [#'brand', \n",
-    "    'brand_qtymean',      \n",
-    "       'brand_valmean'\n",
-    "    ,'brand_insmean', 'brand_weightsum', 'brand_weightmean', 'brand_costmean'\n",
-    "]\n",
-    "#dnum_molecule_test\n",
-    "snm_alt = [#'molecule_test', \n",
-    "     'molecule_test_qtycount'\n",
-    "     ,'molecule_test_qtymean', 'molecule_test_valmean'\n",
     "     ,'molecule_test_insmean']"
    ]
   },
@@ -1105,17 +1017,6 @@
    ],
    "source": [
     "d_rsq.sort_values('r2', ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***Benchmark 27% , 38%, 90%***\n",
-    "\n",
-    "***ExtraTrees 56%, 46%, 88%***\n",
-    "\n",
-    "***BaggingRegressor 47%, 35%, 86%***"
    ]
   },
   {
