--- a/4_Final Model & Results.ipynb
+++ b/4_Final Model & Results.ipynb
@@ -146,6 +146,48 @@
     "algorithm can predict the length of delay to within 12 days (RMSE) with an R-Squared of 0.86, \n",
     "an improvement from 16 days (RMSE) and R-Squared of 0.81 with the benchmarked Random Forest regression. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Requirements: software and libraries used\n",
+    "- A python file/module \"my_helper_functions.py\" is included in this folder with a set of my own helper functions\n",
+    "- The rest of the libraries can be installed using either anaconda or pip distributions\n",
+    "- I was running python 3.6.1 on a 64-bit windows system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Install/Download the following libraries and apis \n",
+    "1. python 3.6.1 \n",
+    "2. my_helper_functions - provided in this folder. This is my own module of helper functions. It will be required to run most of the code\n",
+    "3. pandas\n",
+    "4. numpy\n",
+    "5. matplotlib\n",
+    "6. seaborn\n",
+    "7. time\n",
+    "8. datetime\n",
+    "9. pandas_profiling\n",
+    "10. pivottablejs\n",
+    "11. missingno\n",
+    "12. os\n",
+    "13. sklearn\n",
+    "14. yellowbrick\n",
+    "15. imblearn\n",
+    "16. googlemaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
